Image support to posts

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                     <a class="logo" href="#"><img src="res/images/profile.jpg" alt="Profile"></a>
                     <p>Sept 29, 2025</p>
                 </header>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent varius consectetur facilisis. Maecenas gravida dapibus sapien nec ornare. Maecenas a neque sit amet odio tempus luctus.</p>
+                <img class="postImage" src="res/images/delta.jpg" alt="Post image">
+                <p class="postText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent varius consectetur facilisis. Maecenas gravida dapibus sapien nec ornare. Maecenas a neque sit amet odio tempus luctus.</p>
                 <footer class="postFooter">
                     <i class="fa-solid fa-thumbs-up like"></i>
                 </footer>
@@ -39,7 +40,7 @@
                     <p>Sept 22, 2025</p>
                 </header>
                 <div class="postContent">
-                    <p>Suspendisse potenti. In feugiat id dui at lacinia. Vestibulum faucibus fringilla est. Nam sed nibh nec nunc finibus viverra. Donec non pulvinar metus. Sed nunc erat, suscipit ut metus nec, aliquam molestie risus. Mauris fringilla est a dolor venenatis molestie.</p>
+                    <p class="postText">Suspendisse potenti. In feugiat id dui at lacinia. Vestibulum faucibus fringilla est. Nam sed nibh nec nunc finibus viverra. Donec non pulvinar metus. Sed nunc erat, suscipit ut metus nec, aliquam molestie risus. Mauris fringilla est a dolor venenatis molestie.</p>
                 </div>
                 <footer class="postFooter">
                     <i class="fa-solid fa-thumbs-up like"></i>
@@ -52,7 +53,7 @@
                     <p>Sept 15, 2025</p>
                 </header>
                 <div class="postContent">
-                    <p>Sed volutpat pharetra fringilla. Aenean ut ultrices nisl. Fusce eu malesuada ante, nec euismod libero. Maecenas pulvinar ex non nisl condimentum molestie.</p>
+                    <p class="postText">Sed volutpat pharetra fringilla. Aenean ut ultrices nisl. Fusce eu malesuada ante, nec euismod libero. Maecenas pulvinar ex non nisl condimentum molestie.</p>
                 </div>
                 <footer class="postFooter">
                     <i class="fa-solid fa-thumbs-up like"></i>
@@ -65,7 +66,7 @@
                     <p>Sept 8, 2025</p>
                 </header>
                 <div class="postContent">
-                    <p>Duis mattis, diam vitae vulputate semper, orci nisi finibus sapien, non finibus enim quam vel dolor. Morbi faucibus sapien eget eros vulputate, id congue magna scelerisque.</p>
+                    <p class="postText">Duis mattis, diam vitae vulputate semper, orci nisi finibus sapien, non finibus enim quam vel dolor. Morbi faucibus sapien eget eros vulputate, id congue magna scelerisque.</p>
                 </div>
                 <footer class="postFooter">
                     <i class="fa-solid fa-thumbs-up like"></i>
@@ -78,7 +79,7 @@
                     <p>Sept 1, 2025</p>
                 </header>
                 <div class="postContent">
-                    <p>Aliquam eu magna et felis viverra rhoncus. Integer ullamcorper id diam eu sollicitudin. Suspendisse iaculis dictum odio, ut tincidunt leo dictum sit amet. Quisque fermentum lobortis dolor eget aliquet. Pellentesque lectus felis, sollicitudin ac nisi vel, pharetra molestie orci.</p>
+                    <p class="postText">Aliquam eu magna et felis viverra rhoncus. Integer ullamcorper id diam eu sollicitudin. Suspendisse iaculis dictum odio, ut tincidunt leo dictum sit amet. Quisque fermentum lobortis dolor eget aliquet. Pellentesque lectus felis, sollicitudin ac nisi vel, pharetra molestie orci.</p>
                 </div>
                 <footer class="postFooter">
                     <i class="fa-solid fa-thumbs-up like"></i>
