Center login window

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <main id = "login_container">
         <div id = "login_box">
             <a id = "welcome">Welcome to PostIt</a>
-            <a>Create an account</a>
+            <a href="#">Create an account</a>
             <a>or</a>
             <a>Please Log In</a>
             <form id ="login_form" action="index.html">
@@ -30,7 +30,7 @@
                 type= "submit"
                 value="Log in"></button>
             </form>
-            <a>Forgot password</a>
+            <a href="#">Forgot password</a>
         </div>
     </main>
 
