--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                 <input 
                 class = "submit_btn_login"
                 type= "submit"
-                value="Log in"></button>
+                value="Log in">
             </form>
             <a href="#">Forgot password</a>
         </div>
