--- a/addPost.html
+++ b/addPost.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>PostIT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="src/js/dropdown.js"></script>
     <link rel="stylesheet" href="res/css/style.css">
 </head>
 
@@ -13,7 +14,14 @@
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
         </ul>
-        <a class="logo" href="login.html"><img src="res/images/profile.jpg" alt="Profile"></a>
+        <div class="dropdown">
+            <a class="logo" href="#" id="profile-btn"><img src="res/images/profile.jpg" alt="Profile"></a>
+            <div class="dropdown-content" id="dropdown-menu">
+                <p class="dropdown-name">John Doe</p>
+                <p class="dropdown-email">john.doe@ut.ee</p>
+                <a href="login.html" class="dropdown-logout">logout</a>
+            </div>
+        </div>
     </header>
 
     <main class="main-container">
