Date display formatting, validation fixes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>PostIT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="res/css/style.css">
-    <script type="text/javascript" src="src/js/index.js"></script>
-    <script type="text/javascript" src="src/js/dropdown.js"></script>
+    <script src="src/js/index.js"></script>
+    <script src="src/js/dropdown.js"></script>
     <script src="https://kit.fontawesome.com/5518273177.js" crossorigin="anonymous"></script>
 </head>
 
