--- a/addPost.html
+++ b/addPost.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>PostIT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="src/js/dropdown.js"></script>
+    <script src="src/js/dropdown.js"></script>
     <link rel="stylesheet" href="res/css/style.css">
 </head>
 
